[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UserInterface/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main/Game.gd" type="Script" id=2]
[ext_resource path="res://src/Level/Level.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=4]

[node name="Game" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Level" parent="." instance=ExtResource( 3 )]
scale = Vector2( 2, 2 )

[node name="Player" parent="Level" instance=ExtResource( 4 )]
position = Vector2( -3, 261 )

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 1 )]
visible = false

[node name="LeftSpawner" type="Node2D" parent="."]
position = Vector2( -312.244, 468.905 )

[node name="RightSpawner" type="Node2D" parent="."]
position = Vector2( 282.168, 468.332 )

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Enemies" type="Node2D" parent="."]
pause_mode = 1

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
